# valphi

./: README.md  pyproject.toml
examples/: 3.query  3.valphi  4.query  5.query  5.valphi  6.valphi  7.query  9.valphi  happy6.extra  kbau8h1c.network  kbmonk1-1.query  kbmonk1-2.query  kbmonk1-3.query  kbmonk1-4.query  kbmonk1-5.query  kbmonk1-6.query  kbmonk1-7.query  kbmonk1.network  php-4-1-odd.cnf  php-4-2-even.cnf  php-4-3-odd.cnf  php-5-1-odd.cnf  php-5-2-even.cnf  small-1.graph  small-2.extra  small-2.graph  small-3.graph  small-4.graph  small-5-1.query  small-5-3.query  small-5-4.query  small-5-5.query  small-5-6.extra  small-5.graph  small-6-1.query  small-6-10.query  small-6-11.query  small-6-2.query  small-6-3.query  small-6-4.query  (+11 more)
tests/valphi/: test_cli.py  test_controllers.py  test_networks.py  test_propagators.py
valphi/: cli.py  contexts.py  controllers.py  models.py  networks.py  propagators.py  utils.py
