[tool.poetry]
name = "valphi"
version = "0.3.22"
description = "Logic programs ralying on ValPhi semantics"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.0.1"
typeguard = "^2.13.3"
valid8 = "^5.1.2"
pydot = "^1.4.2"
dumbo-asp = "^0.0.8"

[tool.poetry.dev-dependencies]
coverage = "^7.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
